# hapiq

./: .gitignore  .golangci.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOMAIN_VALIDATORS.md  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: ci.yml  nightly.yml  publish-prefix.yml
cmd/: cache.go  check.go  check_test.go  config_search_test.go  constants.go  convert.go  debug.go  domains.go  download.go  download_test.go  downloaders.go  extract.go  fetch.go  manifest.go  root.go  search.go  species.go  text.go  text_test.go  version.go
docs/: LINTING.md  cache-server.md  cache.md  geo-howto.md  manifest.md  single-file-downloads.md
examples/: README.md  accession_validation.go  dedup_integration_demo.go  doi_dedup_demo.go  http_validation_demo.go  parallel_processing_demo.go  simple_dedup_demo.go  test_confidence.go  test_dedup.go  validation_efficiency_demo.go
internal/checker/: checker.go
internal/extractor/: extractor.go  extractor_test.go  http_validator.go  http_validator_test.go  patterns.go  types.go  worker_pool.go  worker_pool_test.go
internal/version/: version.go
pkg/cache/: cache.go  cache_test.go  config.go  config_test.go  freespace_unix.go  freespace_windows.go  gc.go  gc_test.go  (+9 more)
python/: .gitignore  README.md  hatch_build.py  pyproject.toml
python/hapiq/: __init__.py  _binary.py  _runner.py  dataset.py  search.py  types.py
python/tests/: test_dataset.py  test_integration.py  test_search.py  test_types.py
recipe/: recipe.yaml
scripts/: README.md  lint.sh
test/: integration_test.go  testdata.go
(+86 files in other folders)
